# flutter-rust-middleware

./: .gitignore  README.md  httptest.dart  ndk.sh  pubspec.yaml  toolchain-path-export.sh
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/middleware/: MainActivity.java
android/app/src/main/java/labs/mimir/middleware/: MainActivity.java  MiddleWare.java
android/src/main/: AndroidManifest.xml
android/src/main/java/mimir/labs/plugin/middleware/: MiddlewarePlugin.java
cargo/: .gitignore  Cargo.toml  build.sh  toolchainlist.shotgun
cargo/.cargo/: config
cargo/src/: error.rs  key.rs  lib.rs  middleware.h  store.rs  test.rs  transaction.rs
cargo/src/transact/: body.rs  mod.rs  raw_builder.rs  signed.rs  util.rs
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/mimir/labs/plugin/middlewareexample/: MainActivity.java
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: middleware.podspec
ios/Classes/: MiddleWare.swift  MiddlewarePlugin.h  MiddlewarePlugin.m  SwiftMiddlewarePlugin.swift
ios/Runner/: AppDelegate.swift  MiddleWare.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  middleware.dart
test/: widget_test.dart
