[package]
name = "middleware"
version = "0.1.1"
authors = ["nickfierro <nickfierro@gmail.com>"]
description = "Example static library project built for iOS and Android using Flutter"
publish = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10.1", default-features = false }

[lib]
name = "middleware"
crate-type = ["staticlib", "cdylib", "dylib"]

[dependencies]
serde_json = "1.0.24"
