[package]
name = "middleware"
version = "0.1.1"
authors = ["nickfierro <nickfierro@gmail.com>"]
description = "Example static library project built for iOS and Android using Flutter"
publish = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10.1", default-features = false }

[lib]
name = "middleware"
crate-type = ["staticlib", "cdylib", "dylib"]

[dependencies]
serde_json = "1.0.24"
serde_derive = "1.0.70"
serde = "1.0.70"
structopt = "0.2.10"
toml = "0.4.2"
mimir-crypto = { git = "https://github.com/mimirblockchainsolutions/mimir-bridge-alpha.git", branch = "refactor" }
mimir-common = { git = "https://github.com/mimirblockchainsolutions/mimir-bridge-alpha.git", branch = "refactor" }
rand = "0.4.2"
rlp = "0.2.1"
reqwest = "0.8.6"
ring = "0.12.1"
rust-crypto = "0.2.36"
